--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.3.7
 django-allauth==0.25.2
 django-betterforms==1.1.4
 django-crispy-forms==1.6.0
+django-localflavor==1.3
 lazy-object-proxy==1.2.2
 logilab-common==1.2.0
 oauthlib==1.0.3
